CONFIG_ANDROID_FSTAB_FAKE

--- a/arch/arm/configs/mocha_user_defconfig
+++ b/arch/arm/configs/mocha_user_defconfig
@@ -534,6 +534,7 @@ CONFIG_SENSORS_STM8T143=y
 CONFIG_SENSORS_CM3217=y
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
+CONFIG_ANDROID_FSTAB_FAKE=y
 CONFIG_ASHMEM=y
 CONFIG_ANDROID_LOGGER=y
 CONFIG_ANDROID_TIMED_GPIO=y
@@ -615,3 +616,15 @@ CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
 CONFIG_HAVE_ARCH_MMAP_RND_COMPAT_BITS=y
 # CONFIG_ION=y
 # CONFIG_ION_TEGRA=y
+
+CONFIG_PROC_FS=y
+CONFIG_PROC_SYSCTL=y
+CONFIG_PROC_PAGE_MONITOR=y
+CONFIG_REPORT_PRESENT_CPUS=y
+CONFIG_SYSFS=y
+CONFIG_TMPFS=y
+CONFIG_CONFIGFS_FS=y
+CONFIG_MISC_FILESYSTEMS=y
+CONFIG_PSTORE=y
+CONFIG_PSTORE_CONSOLE=y
+CONFIG_PSTORE_RAM=y
