--- a/arch/arm/configs/mocha_user_defconfig
+++ b/arch/arm/configs/mocha_user_defconfig
@@ -628,3 +628,6 @@ CONFIG_MISC_FILESYSTEMS=y
 CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_RAM=y
+CONFIG_SYNC=y
+CONFIG_SW_SYNC=y
+CONFIG_SW_SYNC_USER=y
