Ensuire binder support Android KK

--- a/arch/arm/configs/mocha_user_defconfig
+++ b/arch/arm/configs/mocha_user_defconfig
@@ -631,3 +631,7 @@ CONFIG_PSTORE_RAM=y
 CONFIG_SYNC=y
 CONFIG_SW_SYNC=y
 CONFIG_SW_SYNC_USER=y
+CONFIG_DEBUG_KERNEL=y
+CONFIG_DEBUG_FS=y
+CONFIG_TRACEPOINTS=y
+# CONFIG_DEBUG_DRIVER=y
